+Fixed signup/login back button styling on ios. +Fixed input getting cutoff

--- a/app/scss/_big_form.scss
+++ b/app/scss/_big_form.scss
@@ -38,6 +38,8 @@ $big-form-backcround: #f7f7f7;
 
     input {
         font-size: 28px;
+        padding-bottom: 0;
+        padding-top: 0;
 
         &::placeholder {
             font-size: 20px;
